prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/lex_errors/hex_numbers_expected.diag.txt
ERROR: hexadecimal number expected
testData/diagnostics/compilation_errors/lex_errors/hex_numbers_expected.nut:2:8

// EXPECT_ERROR: "hexadecimal number expected"
let x = "\xZZ"
        ^--


